<resources>
    <string name="app_name">AnkietApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_out">Wyloguj się</string>
    <string name="action_sign_up">Utwórz konto</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="enter">Zaczynamy !</string>
    <string name="analyze">Analizuj</string>
    <string name="add_survey">Jak jest?</string>
    <string name="prev">Wstecz</string>
    <string name="next">Dalej</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_first">Czy byłeś(aś) dzisiaj w porzadku?</string>
    <string name="question_second">Czy wkurzyłeś(aś) się dzisiaj na pracę?</string>
    <string name="question_third">Jak czysto jest w mieszkaniu?</string>
    <string name="question_fourth">Czy pokłóciłeś(aś) się dzisiaj z kimś?</string>
    <string name="question_fifth">Czy zrobiłeś(aś) dzisiaj coś pożytecznego?</string>
    <string name="question_sixth">Ogólna samoocena</string>
    <string name="send_survey">Wyślij</string>

    <!-- Face trcking-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Potrzebujemy dostępu do kamery</string>
    <string name="no_camera_permission">Niestety nie można zrobić zdjęcia bez kamery.\nNadaj uprawnienia</string>
    <string name="low_storage_error">Potrzebujemy więcej miejsca na dysku żeby pobrać rozpoznawanie twarzy. Usuń niepotrzebne dane.</string>
    <string name="overwrite_photo">Chcesz zastąpić poprzednie zdjęcie?</string>
    <string name="photo">Zdjęcie</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="happiness_measurement">Pomiar uśmiechu</string>

    <string name="finish_survey">Zakończ</string>
    <string name="finish_survey_question">Czy chcesz zakończyć ankietę?</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="user_name">User: %s</string>
    <string name="user_email">e-mail: %s</string>
    <string name="user_uid">ID: %s</string>
    <string name="survey_saved">Zapisane!</string>
    <string name="sending">Wysyłanie...</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="work_in_progress">Pracujemy nad tym!</string>
    <string name="log_out">Wylogowanie</string>
    <string name="log_out_message">Czy na pewno chcesz się wylogować?</string>
    <string name="send_failed">Wysyłanie nie powiodło się</string>


</resources>
