<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View.OnClickListener" />

        <variable
            name="clickListener"
            type="OnClickListener" />
    </data>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/btnAnalyze"
            style="@style/dashboard_btn_linear_grid"
            android:onClick="@{clickListener.onClick}">

            <LinearLayout
                style="@style/dashboard_btn_img_linear_grid"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_btn_image_margin"
                    android:src="@drawable/analyze" />

            </LinearLayout>

            <LinearLayout style="@style/dashboard_btn_text_linear_grid">

                <TextView
                    style="@style/dashboard_grid_text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_btn_description_top_margin"
                    android:text="@string/analyze" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAddSurvey"
            style="@style/dashboard_btn_linear_grid"
            android:onClick="@{clickListener.onClick}">

            <LinearLayout
                style="@style/dashboard_btn_img_linear_grid"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_btn_image_margin"
                    android:src="@drawable/add_survey" />

            </LinearLayout>

            <LinearLayout style="@style/dashboard_btn_text_linear_grid">

                <TextView
                    style="@style/dashboard_grid_text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_btn_description_top_margin"
                    android:text="@string/add_survey" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:visibility="gone"
                android:textAppearance="@style/ankietapp_text_white_inputs_text" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textAppearance="@style/ankietapp_text_white_inputs_text" />

            <TextView
                android:id="@+id/user_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_uid"
                android:textAppearance="@style/ankietapp_text_white_inputs_text" />

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </GridLayout>
</layout>